[package]
name = "avio-runtime-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-cdk = "0.7.0"
ic-cdk-macros = "0.7.0"
candid = "0.7.0"
evm = "0.28.0"
sha2 = "0.10.0"
hex = "0.4.3"
tiny-keccak = "2.0.0"
ethabi = "15.0.0"
secp256k1 = "0.22.0"
reqwest = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
ripemd160 = "0.9.0"
base58 = "0.2.0"
mongodb = "2.4.0"
moka = "0.9.0"
log = "0.4.0"
revm = "1.0.0"
tokio = { version = "1.0", features = ["full"] }